<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Reward Math</string>
    <string name="pref_category_restricted">Admin Settings</string>
    <string name="pref_category_game">Game Settings</string>
    <string name="pref_category_diff">Difficulty Settings</string><string name="pref_category_about">About</string>
    <string name="pref_title_restricted_mode">Restricted Mode</string>
    <string name="pref_title_password">Change Password</string>
    <string name="pref_title_free_time">Start Free Time</string>
    <string name="pref_summary_free_time">Pauses restriced mode for time defined by Earned Time</string>
    <string name="pref_title_end_time">End Reward Time</string>
    <string name="pref_summary_end_time">Ends any reward time instantly</string>
    <string name="pref_title_game_type">Game Type</string>
    <string name="pref_title_earned_time">Earned Time</string>
    <string name="pref_title_game_length">Game Length</string>
    <string name="pref_title_correct_needed">Correct Needed</string>
    <string name="pref_title_add_diff">Addition Difficulty</string>
    <string name="pref_title_sub_diff">Subtraction Difficulty</string>
    <string name="pref_title_mult_diff">Multiplication Difficulty</string>
    <string name="pref_title_div_diff">Division Difficulty</string>

    <string-array name="pref_game_type_entries">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Multiplication</item>
        <item>Division</item>
        <item>Mistakes</item>
    </string-array>
    <string-array name="pref_diff_entries">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>

    <string name="pref_diff_default">Easy</string>
    <string name="pref_summary_correct_needed">Number of correct answers needed to pause restricted mode for the time set by Earned Time</string>

    <string-array name="pref_game_type_default">
        <item>Addition</item>
    </string-array>

    <string name="pref_minutes">Minutes:</string>
    <string name="pref_seconds">Seconds:</string>
    <string name="settings_password_prompt">Enter Password:</string>
    <string name="settings_password_prompt_new">First Time? Create a Password:</string>
    <string name="settings_password_enter">Enter</string>
    <string name="homescreen_game_type">Game Type:</string>
    <string name="homescreen_new_game">New Game</string>
    <string name="homescreen_settings">Settings</string>
    <string name="homescreen_extra">Xtra Math</string>
    <string name="homescreen_history">History</string>
    <string name="main_correct">Right:</string>
    <string name="main_incorrect">Wrong:</string>
    <string name="history_wrong">Wrong</string>
    <string name="history_percent">Percent</string>
    <string name="history_right">Right</string>
    <string name="history_header">Click the game to view mistakes...</string>
    <string name="history_type">Types: </string>
    <string name="history_mistakes">Mistakes: </string>
    <string name="help_okay">OK</string>
    <string name="help_title">About the Settings...</string>
    <string name="help_message">Restricted Mode:\nWhen enabled all other apps on the device will be locked until the player gets the required number of problems correct.\n\nStart Free Time:\nStarts reward time instantly.\n\nEnd Reward Time:\nEnds reward time instantly.\n\nGame Type:\nSet the type of problems that will appear. You can mix different types to get a game that contains multiple types of problems. The mistakes setting allows you to play with mistakes from previous games (visible in the History section from the main screen).\n\nGame Length:\nHow long the game will last. Formatted in mm:ss.\n\nCorrect Needed:\nSet how many correct answers are needed to earn reward time.\n\nEarned Time:\nNumber of minutes that will be awarded for a successful game.\n\nDifficulty:\nChange the difficulty of the problems. Harder problems involve larger numbers.</string>
    
    <string name="pref_about_title">Version</string>
    <string name="pref_title_delete">Delete History</string>
    <string name="pref_summary_delete">Delete the game history</string>
    <string name="pref_title_max_errors">Maximum Errors</string>
    <string-array name="pref_include_entries">
        <item >Include</item>
        <item >Exclude</item>
    </string-array>
    <string name="pref_include_title">Default Handling of New Mistakes</string>
    <string name="pref_include_message">Should mistakes from new games be automatically included in the mistakes list</string>
    <string name="pref_include_default">Include</string>
    <string name="symbol_not_equal">≠</string>

</resources>