<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/app_name"
        android:textSize="@dimen/homescreen_title_text_size"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/homescreen_title_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_game_type"
        android:paddingTop="@dimen/homescreen_type_title_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:fontFamily="sans-serif-light" />
    
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:gravity="center"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_new_game" 
        android:layout_marginTop="@dimen/homescreen_button_padding"
        />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_extra" 
        android:layout_marginTop="@dimen/homescreen_button_padding"/>
    
    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_history" 
        android:layout_marginTop="@dimen/homescreen_button_padding"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_settings" 
        android:layout_marginTop="@dimen/homescreen_button_padding"/>

</LinearLayout>
