<?xml version="1.0" encoding="utf-8"?>
<com.tcx.mathgame.GameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/history_item_height"
    android:background="@drawable/card_bg3"
    android:clickable="true"
    android:onClick="showWrong" >

    <RelativeLayout
        android:id="@+id/history_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/history_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/history_right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/history_wrong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/history_wrong"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/history_percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/history_percent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1" >

            <TextView
                android:id="@+id/history_right_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="60"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/history_wrong_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/history_percent_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="85%"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/history_extra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/history_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/history_type"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/history_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="5dp"
            android:text="1/15/14 3:33"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/history_mistakes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/history_types"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/history_mistakes"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/history_types_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/history_types"
            android:layout_alignBottom="@+id/history_types"
            android:layout_toRightOf="@+id/history_types"
            android:ellipsize="marquee"
            android:focusable="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/history_mistakes_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/history_mistakes"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/history_mistakes"
            android:ellipsize="end"
            android:maxLines="3"
            android:scrollHorizontally="true"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</com.tcx.mathgame.GameLayout>